--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="col-md-5 about-img">
           <div class="img-1">
-            <img src="Assets/imad-2.jpg" alt="">
+            <img src="Assets/imaaad.jpg" alt="">
           </div>
 
           <div class="heading">
