--- a/index.html
+++ b/index.html
@@ -338,6 +338,18 @@
             <h3>Linkedin</h3>
           </a>
         </div>
+         <div class="col-md-12 display">
+        <div class="col-md-12 contact-form">
+          <h3>Message Me</h3>
+          <form name="submit-to-google-sheet">
+          <input type="text" name="Name" placeholder="Enter Your Name" required>
+          <input type="email" name="Email" placeholder=" Enter Your Email" required>
+          <textarea name="Message" id=""  rows="6" placeholder="Your Message"></textarea>
+          <button type="submit">Submit</button>
+          </form>
+          <p id="msg"></p>
+        </div>
+        </div>
 
 
         <div class="col-md-12 question">
