--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
               <h3>2017-2019</h3>
               <h4>Completed Fsc</h4>
               <h5>From Air Foundation College System Timergara</h5>
-              <p>Having successfully completed my FSc (Intermediate) with a specialization in [mention your
-                specialization], I am an ambitious and dedicated individual poised to make meaningful contributions in
+              <p>Having successfully completed my FSc (Intermediate) with a specialization in Web Development, I am an ambitious and dedicated individual poised to make meaningful contributions in
                 both academic and professional spheres.</p>
               <table>
                 <tr>
