--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
             aria-valuemax="100">
             <div class="progress-bar" style="width: 50%"></div>
+          <div>
+<h5>Csharp 60%</h5>
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 60%"></div>
+          </div>
+
+<h5>Asp.Net.coreMVC 70%</h5>
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 70℅"></div>
           </div>
 
           <h5>BOOTSTRAP 90%</h5>
@@ -187,10 +198,10 @@
           <h2>Projects</h2>
         </div>
         <div class="col-md-6 project-img">
-          <a href="https://imadcoding55.github.io/Imad-Portfolio/">
+          <a href="https://codewithimaad.github.io/Imad-Portfolio/">
             <img src="Assets/2024-04-29.png" alt="">
           </a>
-          <a href="https://imadcoding55.github.io/Imad-Portfolio/">
+          <a href="https://codewithimaad.github.io/Imad-Portfolio/">
             <h3>Personal Portfolio</h3>
           </a>
           <p>This is first portfolio Personal website built by me using html, css, bootstrap & Javascript and i have
