--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="script.js" defer></script>
+  <script src="script1.js" defer></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
     integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <link rel="stylesheet" href="style.css">
 
@@ -68,7 +69,6 @@
             Me</a>
           <a href="https://www.linkedin.com/in/imad-khan-76388b305?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
             class="btn-2">Linkedin</a>
-        <i class="fa-solid fa-palette" id="toggleDark"></i>
         </div>
 
         <div class="col-md-5 home-img">
@@ -146,28 +146,25 @@
             <div class="progress-bar" style="width: 90%"></div>
           </div>
 
-          <h5>JavaScript 50%</h5>
+          <h5>Bootstrap 90%</h5>
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
             aria-valuemax="100">
-            <div class="progress-bar" style="width: 50%"></div>
-          <div>
-<h5>Csharp 60%</h5>
+            <div class="progress-bar" style="width: 90%"></div>
+          </div>
+
+          <h5>JavaScript 70%</h5>
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 70%"></div>
+          </div>
+
+          <h5>Asp Net Mvc 60%</h5>
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
             aria-valuemax="100">
             <div class="progress-bar" style="width: 60%"></div>
           </div>
 
-<h5>Asp.Net.coreMVC 70%</h5>
-          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
-            aria-valuemax="100">
-            <div class="progress-bar" style="width: 70℅"></div>
-          </div>
-
-          <h5>BOOTSTRAP 90%</h5>
-          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
-            aria-valuemax="100">
-            <div class="progress-bar" style="width: 90%"></div>
-          </div>
+          
         </div>
 
         <div class="col-md-7 profile-section">
